--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,8 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
-  width: 90%;
-  max-width: 400px;
+  width: 100%;
+  max-width: 200px;
 
   /* 세로 중앙 정렬 */
   display: flex;
@@ -110,14 +110,14 @@ button:hover {
 /* 모바일 환경 최적화 */
 @media (max-width: 480px) {
   .container {
-    width: 95%;
-    padding: 20px;
-    height: auto;
+    width: 100%;
+    padding: 50px;
+    height: 60vh;
   }
 
   h2 {
     font-size: 1.6rem;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
   }
 
   input[type="month"],
